--- a/config/redis.yml
+++ b/config/redis.yml
@@ -1,14 +1,17 @@
 development:
   host: localhost
   port: 6379
+  db: 0
   driver: :hiredis
 
 test:
   host: localhost
   port: 6379
+  db: 1
   driver: :hiredis
 
 production:
-  host: change_me
+  host: <%= ENV["REDIS_HOST"] %>
   port: 6379
+  db: 0
   driver: :hiredis
