--- a/config/config.yml
+++ b/config/config.yml
@@ -8,6 +8,11 @@ test:
   gcm_sender_id: 343180867553
   gcm_api_key: IzaSyCKuLZhhi_EBbXsUX8na9BC3GHSz9gzYN8
 
+staging:
+  gcm_url: https://android.googleapis.com/gcm/send
+  gcm_sender_id: 343180867553
+  gcm_api_key: IzaSyCKuLZhhi_EBbXsUX8na9BC3GHSz9gzYN8
+
 production:
   gcm_url: https://android.googleapis.com/gcm/send
   gcm_sender_id: <%= ENV["GCM_SENDER_ID"] %>
