--- a/config/resque.yml
+++ b/config/resque.yml
@@ -8,6 +8,11 @@ test:
   port: 6379
   db: 3
 
+staging:
+  host: localhost
+  port: 6379
+  db: 2
+
 production:
   host: <%= ENV["REDIS_HOST"] %>
   port: 6379
